--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />    
+    />
   </head>
   <body>
     <div id="container">
@@ -27,7 +27,7 @@
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
       </form>
-      <div id="weather" class="show">
+      <div id="weather">
         <h1 id="tittle">Nova Petrópolis - BR</h1>
         <div id="infos">
           <div id="temp">
@@ -43,32 +43,32 @@
           </div>
           <div id="other_infos">
             <div class="info">
-                <i id="temp_max_icon" class="fa-solid fa-temperature-high"></i>
-                <div>
-                    <h2>Temp. max</h2>
-                    <p id="temp_max">32° C</p>
-                </div>
+              <i id="temp_max_icon" class="fa-solid fa-temperature-high"></i>
+              <div>
+                <h2>Temp. max</h2>
+                <p id="temp_max">32° C</p>
+              </div>
             </div>
             <div class="info">
-                <i id="temp_min_icon" class="fa-solid fa-temperature-low"></i>
-                <div>
-                    <h2>Temp. min</h2>
-                    <p id="temp_min">20° C</p>
-                </div>
+              <i id="temp_min_icon" class="fa-solid fa-temperature-low"></i>
+              <div>
+                <h2>Temp. min</h2>
+                <p id="temp_min">20° C</p>
+              </div>
             </div>
             <div class="info">
-                <i id="humidity_icon" class="fa-solid fa-droplet"></i>
-                <div>
-                    <h2>Humidade</h2>
-                    <p id="humidity">50%</p>
-                </div>
+              <i id="humidity_icon" class="fa-solid fa-droplet"></i>
+              <div>
+                <h2>Humidade</h2>
+                <p id="humidity">50%</p>
+              </div>
             </div>
             <div class="info">
-                <i id="wind_icon" class="fa-solid fa-wind"></i>
-                <div>
-                    <h2>Vento</h2>
-                    <p id="wind">2.0km/h</p>
-                </div>
+              <i id="wind_icon" class="fa-solid fa-wind"></i>
+              <div>
+                <h2>Vento</h2>
+                <p id="wind">2.0km/h</p>
+              </div>
             </div>
           </div>
         </div>
